packages/typ/tests/fixtures/diagnostics/0920_gadt_pair_constructor_payload_mismatch_06.ml.expected
File "0920_gadt_pair_constructor_payload_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0920_gadt_pair_constructor_payload_mismatch_06 is not a valid module name.

File "0920_gadt_pair_constructor_payload_mismatch_06.ml", line 5, characters 48-52:
5 | let _ : (int * bool) pair_box_zeta = Pair_zeta (true, 5)
                                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
